<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UserStackWithTesting" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="SHC-sl-qLq">
                                <rect key="frame" x="20" y="144" width="374" height="262"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VcT-eE-1rU">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PyQ-B4-IlW">
                                        <rect key="frame" x="0.0" y="57" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Age" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fMu-G2-bcp">
                                        <rect key="frame" x="0.0" y="114" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="UserName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4EC-Pf-Sac">
                                        <rect key="frame" x="0.0" y="171" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x0Z-er-2pU">
                                        <rect key="frame" x="0.0" y="228" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="4EC-Pf-Sac" firstAttribute="leading" secondItem="SHC-sl-qLq" secondAttribute="leading" id="1fJ-8l-Rd6"/>
                                    <constraint firstAttribute="trailing" secondItem="4EC-Pf-Sac" secondAttribute="trailing" id="54K-t5-22G"/>
                                    <constraint firstItem="fMu-G2-bcp" firstAttribute="leading" secondItem="SHC-sl-qLq" secondAttribute="leading" id="5il-rw-Xf4"/>
                                    <constraint firstItem="VcT-eE-1rU" firstAttribute="leading" secondItem="SHC-sl-qLq" secondAttribute="leading" id="98G-Sn-W0i"/>
                                    <constraint firstAttribute="trailing" secondItem="PyQ-B4-IlW" secondAttribute="trailing" id="IK5-2W-cts"/>
                                    <constraint firstItem="x0Z-er-2pU" firstAttribute="leading" secondItem="SHC-sl-qLq" secondAttribute="leading" id="Jis-Wl-MaD"/>
                                    <constraint firstAttribute="trailing" secondItem="VcT-eE-1rU" secondAttribute="trailing" id="R5u-b6-61x"/>
                                    <constraint firstAttribute="trailing" secondItem="fMu-G2-bcp" secondAttribute="trailing" id="lh8-BX-wck"/>
                                    <constraint firstItem="PyQ-B4-IlW" firstAttribute="leading" secondItem="SHC-sl-qLq" secondAttribute="leading" id="pP0-59-3kE"/>
                                    <constraint firstAttribute="trailing" secondItem="x0Z-er-2pU" secondAttribute="trailing" id="uu3-vP-A3S"/>
                                </constraints>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S1D-82-iDW">
                                <rect key="frame" x="20" y="456" width="374" height="50"/>
                                <color key="backgroundColor" red="0.26274509800000001" green="0.35686274509999999" blue="0.56862745100000001" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="k2t-oD-ahe"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                <state key="normal" title="Add This User">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="addUserButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Rx-5K-wpV"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SHC-sl-qLq" secondAttribute="trailing" constant="20" id="2cE-Zz-52k"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="S1D-82-iDW" secondAttribute="trailing" constant="20" id="Lwe-zx-nhk"/>
                            <constraint firstItem="S1D-82-iDW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="PFe-FF-YTP"/>
                            <constraint firstItem="S1D-82-iDW" firstAttribute="top" secondItem="SHC-sl-qLq" secondAttribute="bottom" constant="50" id="S8a-sH-bui"/>
                            <constraint firstItem="SHC-sl-qLq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="YlH-On-MD9"/>
                            <constraint firstItem="SHC-sl-qLq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="nsc-28-0NV"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="ageInput" destination="fMu-G2-bcp" id="beH-VQ-cTs"/>
                        <outlet property="firstNameInput" destination="VcT-eE-1rU" id="bM4-Ne-ODf"/>
                        <outlet property="lastNameInput" destination="PyQ-B4-IlW" id="64k-Ke-3bD"/>
                        <outlet property="passwordInput" destination="x0Z-er-2pU" id="MH1-Dl-Thy"/>
                        <outlet property="userNameInput" destination="4EC-Pf-Sac" id="NsQ-Wy-oBa"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="302.89855072463769" y="123.88392857142857"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
