//
//  UserStackWithTestingUITests.swift
//  UserStackWithTestingUITests
//
//  Created by Quinton Quaye on 3/25/21.
//

import XCTest

class UserStackWithTestingUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        
        let app = XCUIApplication()
        app.textFields["Age"].tap()
        
        let usernameTextField = app.textFields["UserName"]
        usernameTextField.tap()
        usernameTextField.tap()
        usernameTextField.tap()
        
        let passwordTextField = app.textFields["Password"]
        passwordTextField.tap()
        passwordTextField.tap()
        app/*@START_MENU_TOKEN@*/.staticTexts["Add This User"]/*[[".buttons[\"Add This User\"].staticTexts[\"Add This User\"]",".staticTexts[\"Add This User\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
